--- a/application-prod.yml
+++ b/application-prod.yml
@@ -6,8 +6,11 @@ eureka:
       defaultZone: https://api-service-registry.herokuapp.com/eureka
       non-secure-port: 80
       secure-port: 443
+      
   instance:
     hostname: api-service-registry.herokuapp.com
     homePageUrl: https://${eureka.instance.hostName}/
     home-page-url-path: https://${eureka.instance.hostName}
- 
+    secure-port-enabled: false
+    non-secure-port-enabled: true
+    non-secure-port: 80
