--- a/application-prod.yml
+++ b/application-prod.yml
@@ -4,8 +4,8 @@ eureka:
     fetch-registry: true
     service-url:
       defaultZone: https://api-service-registry.herokuapp.com/eureka
-      non-secure-port: 80
-      secure-port: 443
+      # non-secure-port: 80
+      # secure-port: 443
       
   instance:
     hostname: api-service-registry.herokuapp.com
