--- a/application-prod.yml
+++ b/application-prod.yml
@@ -4,13 +4,11 @@ eureka:
     fetch-registry: true
     service-url:
       defaultZone: https://api-service-registry.herokuapp.com/eureka
-      # non-secure-port: 80
-      # secure-port: 443
       
   instance:
     hostname: api-service-registry.herokuapp.com
     homePageUrl: https://${eureka.instance.hostName}/
     home-page-url-path: https://${eureka.instance.hostName}
-    secure-port-enabled: false
+    secure-port-enabled: true
     non-secure-port-enabled: true
     non-secure-port: 80
