--- a/application-prod.yml
+++ b/application-prod.yml
@@ -11,3 +11,4 @@ eureka:
     homePageUrl: https://${eureka.instance.hostName}/
     home-page-url-path: https://${eureka.instance.hostName}
     non-secure-port: 80
+    secure-port: 443
