--- a/application-prod.yml
+++ b/application-prod.yml
@@ -5,6 +5,7 @@ eureka:
     serviceUrl:
       defaultZone: http://api-service-registry.herokuapp.com/eureka
       non-secure-port: 80
+      secure-port: 443
       
   instance:
     hostname: api-service-registry.herokuapp.com
