--- a/application-prod.yml
+++ b/application-prod.yml
@@ -4,12 +4,11 @@ eureka:
     fetch-registry: true
     serviceUrl:
       defaultZone: http://api-service-registry.herokuapp.com/eureka
-      non-secure-port: 80
-      secure-port: 443
-      
+
   instance:
     hostname: api-service-registry.herokuapp.com
     homePageUrl: https://${eureka.instance.hostName}/
     home-page-url-path: https://${eureka.instance.hostName}
     non-secure-port: 80
-    secure-port: 443
+    non-secure-port-enabled: true
+    secure-port-enabled: false
