--- a/application-prod.yml
+++ b/application-prod.yml
@@ -9,6 +9,6 @@ eureka:
     hostname: api-service-registry.herokuapp.com
     homePageUrl: https://${eureka.instance.hostName}/
     home-page-url-path: https://${eureka.instance.hostName}
-    non-secure-port: 80
-    non-secure-port-enabled: true
-    secure-port-enabled: false
+#    non-secure-port: 80
+#    non-secure-port-enabled: true
+#    secure-port-enabled: false
